correct z-index on menu that appears after initiating a save

--- a/src/components/menu-bar/menu-bar.css
+++ b/src/components/menu-bar/menu-bar.css
@@ -3,6 +3,7 @@
 @import "../../css/z-index.css";
 
 .menu-bar {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -29,6 +30,7 @@
     font-weight: bold;
     background-color: $motion-primary;
     color: $ui-white;
+    z-index: $z-index-menu-bar;
 }
 
 .main-menu {
